made it to where borders around the page numbers would change depending on what page you are on.

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -326,7 +326,7 @@ h1 {
   padding-right: 8px;
 }
 
-.pageNumbers_individual_numbers span:first-child {
+.pageNumber-border {
   border: 1px solid black;
 }
 
