--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -278,6 +278,49 @@ h1 {
   background-color: var(--main-text-color);
   color: var(--main-bg-color);
 }
+
+.SingleMovieResult-container {
+  position: absolute;
+  border: 1px solid var(--main-text-color);
+  background-color: var(--main-bg-color);
+  z-index: 4;
+  width: 70%;
+  left: 15%;
+  right: 15%;
+  padding: 20px;
+  box-shadow: 0px 0px 1.5px;
+}
+
+.SingleMovieResult-title {
+  font-size: 1.8rem;
+  margin-bottom: 10px;
+}
+
+.SingleMovieResult-image {
+  width: 110px;
+  height: 166px;
+}
+
+.SingleMovieResult-genre {
+  font-size: 0.7rem;
+  margin-bottom: 5px;
+  margin-top: 5px;
+  font-weight: 400;
+}
+
+.SingleMovieResult-individual_entries {
+  font-size: 0.7rem;
+  font-weight: 400;
+}
+
+.SingleMovieResult-overview {
+  border-top: 1px solid var(--main-text-color);
+  margin-top: 10px;
+  padding-top: 10px;
+  font-size: 1rem;
+  line-height: 1.4;
+}
+
 .movieResults_container {
   font-size: 0.6rem;
   display: flex;
@@ -332,6 +375,11 @@ h1 {
   font-size: 0.7rem;
 }
 
+.movieResults_individual_images {
+  width: 89px;
+  height: 134px;
+}
+
 .pageNumbers_container {
   position: absolute;
   bottom: 0;
@@ -361,6 +409,43 @@ h1 {
 @media screen and (min-width: 820px) {
   .App {
     text-align: left;
+  }
+
+  .SingleMovieResult-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 70%;
+  }
+
+  #SingleMovieResult {
+    top: 10% !important;
+  }
+
+  .SingleMovieResult-title {
+    width: 100%;
+  }
+
+  .SingleMovieResult-image {
+    width: 229px;
+    height: 348px;
+  }
+
+  .SingleMovieResult-genre {
+    display: inline-block;
+    width: 100%;
+    font-size: 1rem;
+  }
+
+  .SingleMovieResult-individual_entries {
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 300;
+  }
+
+  .SingleMovieResult-overview {
+    width: 80%;
+    font-size: 1.2rem;
   }
 
   .header_container {
@@ -469,6 +554,7 @@ h1 {
     width: 300px;
     min-height: 170px;
   }
+
   .movieResults_text_results {
     display: inline-block;
     padding: auto;
